chandeliers-lus/tests/compile_fail/ui/causality/redef-node.stderr
error: Attempt to redefine Node `foo`, when a prior item already defines it
 --> tests/compile_fail/ui/causality/redef-node.rs:6:5
  |
6 | /     node foo() returns ();
7 | |     let tel;
  | |___________^
  |
note: Already defined here
 --> tests/compile_fail/ui/causality/redef-node.rs:3:5
  |
3 | /     node foo() returns ();
4 | |     let tel;
  | |___________^
